<resources>
    <string name="app_name">Project</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="draw">D</string>
    <string name="lose">L</string>
    <string name="win">W</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="sign_up">Sign-Up</string>
    <string name="main_menu">Main Menu</string>
    <string name="log_out">Log out</string>
    <string name="game">Game</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>