<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_leaderboard_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:scaleType="fitXY"
        android:src="@drawable/login_background_image"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:id="@+id/title"
        android:background="@drawable/leaderboard_background"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/leaderboard"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="23sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/headers_linear_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="start"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/leaderboard_background">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:text="@string/rank"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="21sp"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:maxLines="1"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="21sp"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/win"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="21sp"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/draw"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="21sp"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/lose"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="21sp"/>

    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="105dp"
            android:paddingTop="10dp"
            android:paddingBottom="70dp"
            app:layout_constraintTop_toBottomOf="@id/headers_linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/scrollView"
            android:background="@drawable/leaderboard_background">

        <LinearLayout
            android:id="@+id/ranks"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:orientation="vertical"/>

    </ScrollView>

    <Button
        android:id="@+id/leaderboard_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:backgroundTint="#F7921D"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="@+id/scrollView">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>